# QChemi

./: Makefile  README.md  pyproject.toml
configs/: system.yaml
data/: pocket.xyz
env/: requirements.txt
examples/bace1/: README.md  batch_generate_ligands_and_charges.py  setup_openchem_env_venv.sh  validate_charges_relaxed.py  validate_sdf_topology.py
examples/bace1/data/: README.md
examples/bace1_minimal/: run_example.py
examples/bace1_minimal/data/: ligand.xyz  protein_charges_ref.csv  waters_ref.xyz
scripts/: make_integrals_fragment.py  make_integrals_from_driver.py  run_vqe_fragment_v2.py  run_vqe_minimal_v2.py
src/qiskit_dmet_vqe/: __init__.py  integrals_to_problem.py
src/qiskit_dmet_vqe/dmet/: build_bath.py  fragmenter.py  fragmentify.py  localize.py  solver_vqe.py
src/qiskit_dmet_vqe/energies/: binding_energy.py
src/qiskit_dmet_vqe/qpu/: pmsv.py
