[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qchemi"
version = "0.1.0"
description = "QChemi Project"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-dir]
src = "src"

